<resources>

    <string name="app_name">Zero Waste Ideas</string>

    <!-- CHANGE -->>
    <string name="app_email" translatable="false">zerowastepomysly@email.com</string>

    <!-- CHANGE -->>
    <string name="google_play_address" translatable="false">https://play.google.com/store/apps/details?id=development.dreamcatcher.howaboutit</string>

    <!-- CHANGE -->>
    <string name="facebook_address" translatable="false">https://www.facebook.com/wyrzuctoapp</string>

    <string name="privacy_policy_address">https://docs.google.com/document/d/1XSmg_1mvVomIr7hOAaV0rjZ91JWb7VXm/edit?usp=sharing</string>

    <string name="privacy_policy_link">Privacy Policy (link)</string>

    <string name="connection_problem">Connection problem</string>

    <string name="please_check_your_internet_connection">Please check your Internet connection</string>

    <string name="thank_you_for_downloading_bin">Thank you for downloading Zero Waste Ideas!</string>

    <string name="we_hope_that_our_work">We hope that our work helps promoting ecological life-style.</string>

    <string name="we_will_be_very_grateful">We will be very grateful if you would like to leave us a feedback.</string>

    <string name="if_you_can_see_anything">If you can see anything we could improve, please do not hesitate to contact us:</string>

    <string name="huge_special_thanks_to_everyone">
        Huge specials thanks to everyone who contributed into the app:\n\n

        App Icon made by Icongeek26 from www.flaticon.com:\n
        https://www.flaticon.com/authors/icongeek26\n\n

        Used font: \'Lato\' by Łukasz Dziedzic:\n
        https://fonts.google.com/specimen/Lato\n\n

        Circular Progress Bar drawable code by M. Reza Nasirloo:\n
        https://medium.com/@m.reza.nasirloo\n\n

        Cross Icon made by Lyolya from www.flaticon.com:\n
        https://www.flaticon.com/authors/lyolya\n\n

        Search Engine Icon made by Vectors Market from www.flaticon.com:\n
        https://www.flaticon.com/authors/vectors-market
    </string>

    <string name="language_issue" translatable="false">Language issue</string>

    <string name="we_are_sorry_but_currently" translatable="false">We are sorry, but currently the app content is available only in Polish language. English version is coming soon!</string>

    <string name="ok" translatable="false">OK</string>

    <string name="picture_unavailable">Picture unavailable</string>

    <string name="loading">Loading...</string>

    <string name="search">Search</string>

    <string name="show_more">Show more</string>

    <string name="yes_please">Yes, please</string>

    <string name="title">Title</string>

    <string name="idea_description">Idea description...</string>

    <string name="add_idea">Add idea</string>

    <string name="add_a_new_zero_waste">Add a new Zero Waste idea to the application</string>

    <string name="email_address_wont_be_published">Email address (won\'t be published)</string>

    <string name="tags_eg_glass_food_design">Tags, e.g. glass food design</string>

    <string name="author_of_the_idea">Author of the idea</string>

    <string name="add_the_picture_optional">Add a picture (optional)</string>

    <string name="than_you_for_new_idea">Thank you for adding new idea</string>

    <string name="it_will_be_published_soon">It will be published soon by moderator.</string>

    <string name="oops_somethings_missing">Oops, something\'s missing</string>

    <string name="it_seems_that_some_necessary">It seems that some necessary information hasn\'t been provided.</string>

    <string name="footer">Zero Waste Ideas ® 2020</string>

    <!-- Analytics events names -->

    <string name="analytics_event_feedback_stars_clicked" translatable="false">feedback_stars_clicked</string>

    <string name="analytics_event_items_database_error" translatable="false">items_database_error</string>

    <string name="analytics_event_protips_database_error" translatable="false">protips_database_error</string>

    <string name="analytics_event_new_idea" translatable="false">new_idea</string>

    <!-- Notifications channels -->

    <string name="default_notification_channel_id" translatable="false">default_notification_channel_id</string>

    <string name="default_notification_channel_name" translatable="false">default_notification_channel_name</string>

</resources>
