<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/detailed_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:elevation="@dimen/elevation_second_floor">

    <RelativeLayout
            android:id="@+id/spacing_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".14"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorBackgroundAlternative"
            android:alpha="0.7"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/background_badge"
            app:layout_constraintTop_toBottomOf="@id/spacing_top"
            app:layout_constraintBottom_toTopOf="@id/spacing_bottom">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:id="@+id/main_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="30dp"
                    android:focusable="true"
                    android:orientation="vertical">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_marginTop="40dp"
                            android:layout_marginBottom="20dp"

                            android:padding="20dp"

                            android:textAlignment="center"
                            android:text="@string/add_a_new_zero_waste"/>

                    <EditText
                            android:id="@+id/title_input"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="30dp"
                            android:paddingStart="42dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:inputType="text"
                            android:imeOptions="actionDone"
                            android:background="@color/colorBackgroundEditText"
                            android:textAlignment="viewStart"
                            android:hint="@string/title"
                            android:lines="1"/>

                <EditText
                        android:id="@+id/description_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="30dp"
                        android:paddingStart="42dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:inputType="textMultiLine"
                        android:imeOptions="actionDone"
                        android:background="@color/colorBackgroundEditText"
                        android:textAlignment="textStart"
                        android:gravity="start"
                        android:hint="@string/idea_description"
                        android:lines="8"
                        android:maxLines="12"/>

                <androidx.cardview.widget.CardView
                        android:id="@+id/thumbnail_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        app:cardCornerRadius="10dp"
                        android:visibility="gone">

                    <ImageView
                            android:id="@+id/thumbnail"
                            android:src="@color/browser_actions_divider_color"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"/>

                </androidx.cardview.widget.CardView>

                <Button
                        style="@style/ButtonStyle"
                        android:id="@+id/add_picture_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:visibility="gone"

                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"

                        android:layout_marginBottom="30dp"

                        android:text="@string/add_the_picture_optional"/>

                <EditText
                        android:id="@+id/tags_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="30dp"
                        android:paddingStart="42dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:inputType="text"
                        android:imeOptions="actionDone"
                        android:background="@color/colorBackgroundEditText"
                        android:textAlignment="viewStart"
                        android:hint="@string/tags_eg_glass_food_design"
                        android:lines="1"/>

                <EditText
                        android:id="@+id/email_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="30dp"
                        android:paddingStart="42dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:inputType="text"
                        android:imeOptions="actionDone"
                        android:background="@color/colorBackgroundEditText"
                        android:textAlignment="viewStart"
                        android:hint="@string/email_address_wont_be_published"
                        android:lines="1"/>

                <EditText
                        android:id="@+id/author_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="30dp"
                        android:paddingStart="42dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:inputType="text"
                        android:imeOptions="actionDone"
                        android:background="@color/colorBackgroundEditText"
                        android:textAlignment="viewStart"
                        android:hint="@string/author_of_the_idea"
                        android:lines="1"/>

                <Button
                        style="@style/ButtonStyle"
                        android:id="@+id/add_idea_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"

                        android:layout_marginBottom="30dp"

                        android:text="@string/add_idea"/>

                <include
                        layout="@layout/footer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

        </ScrollView>

        <ImageButton
                android:id="@+id/btn_cross"
                android:layout_width="@dimen/detailed_view_cross_button_length"
                android:layout_height="@dimen/detailed_view_cross_button_length"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="@dimen/detailed_view_cross_button_margin"
                android:src="@drawable/icon_cross"
                android:scaleType="centerCrop"
                android:background="@null"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
            android:id="@+id/spacing_bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".14"
            android:background="@color/colorBackgroundAlternative"
            app:layout_constraintBottom_toBottomOf="parent"
            android:alpha="0.7"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>